# koioj

./: .gitignore  .npmrc  .yarnrc  Cargo.toml  README.md  biome.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
.cargo/: config.toml
crates/koioj-api/: Cargo.toml
crates/koioj-api/src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  perm.rs
crates/koioj-api/src/route/: judge.rs  misc.rs  mod.rs  problems.rs  training_plans.rs  users.rs  web.rs
crates/koioj-api/src/route/contests/: mod.rs  ranking_cache.rs
crates/koioj-common/: Cargo.toml
crates/koioj-common/src/: auth.rs  error.rs  judge.rs  utils.rs
crates/koioj-judge/: Cargo.toml  build.rs
crates/koioj-judge/src/: config.rs  judge.rs  judger.cpp  judger.rs  main.rs  sandbox.rs  websocket.rs
crates/koioj-web/: Cargo.toml  build.rs  index.html  vite.config.ts
crates/koioj-web/src/: App.vue  Footer.vue  main.mts  routes.mts  utils.mts
crates/koioj-web/src/components/: CodeBlock.vue  ContestRanking.vue  ContestSelector.vue  EntityLink.vue  Footer.vue  Header.vue  TestCaseEditor.vue  ThemeToggle.vue
crates/koioj-web/src/composables/: useApiErrorHandler.mts  useContestPasswordPrompt.mts  useMarkdownRenderer.mts
crates/koioj-web/src/pages/: Contest.vue  ContestList.vue  CreateSolution.vue  EditContest.vue  EditProblem.vue  EditTrainingPlan.vue  Index.vue  Login.vue  NotFound.vue  OverallRanking.vue  Problem.vue  ProblemList.vue  Profile.vue  Register.vue  Solution.vue  SolutionList.vue  Submission.vue  Submit.vue  TrainingPlan.vue  TrainingPlanList.vue
crates/koioj-web/src/stores/: contestPassword.mts  user.mts
crates/theoj-api/: Cargo.toml
crates/theoj-api/.sqlx/: query-00d7f39e6df040a643ba13f25b303bd62af31601645b6dee90f34aeaca7b8a4e.json  query-0119178269da8ea4726ec19b6626155d001eab342e5f49e488dc23b537ae157b.json  query-067a52b9b25f7d414eeb4741dd4d8ad51c3f41327d3ab9b72a2adf9c825c5638.json  query-0b9737f1d9eefbd56e7d0d44dce7630ba404fb210f5906500b09d69128e185d8.json  query-0e608f52ea64709541c4f05f832d8dd5a8d38cd63cf95dcc90604e932c366716.json  query-10d8d76bf0a7f4d03632ad5d0b85e2bd2665e6a644df248ce9f183c0e1042e7c.json  query-1284ca37cfe7ef9e7df64b7e674ea57a99b56b6121ea9da1a407b46452742157.json  query-14213986b4308ad749164ea99a76894382ed19220867ee124988497da175c5c0.json  query-16b01a4c11f87dfbbc4478962efdaa2db9bbe0f4b1c9da5d3e2b577b580607d9.json  query-35dbe5d7b25519c4fb6bf125242a35c8270f1fe4f3c676d9b9a97a3211d1dda3.json  query-36a4b70b7f0946e0a0dfef472cdade863bbb63b0a209c6b3b8e11b4382476180.json  query-3811d3310b98ab29de87c8fe8e502f8c2be0805e7c653bc30681eddf15393a05.json  query-3ef594ffbc9a59d9b1f6eb8988f145a80e0f4f2f3b82c00cee02baf1b513295d.json  query-45db8d90814650a7c8c7e44d26f6a3c53f54c8eb7f1b185872cb49b717541b6c.json  query-4db86c31ea5678a30d00c8a89f56241f25e59e4f5fda87b28870f3292e4bf56e.json  query-541f7987d016f7bbec3fe13ec86576c3e7301f85004d7ef3cf4bd949e3d234b9.json  query-55cd41fe3292f3086cbc221aa7661e7573a0e3565d5c3b9764ed3d18a609e207.json  query-572d3d2f94446390fd91cc8f636dfebabb7c937c442912e9db22d1470af01923.json  query-5d4c46d2c0f1125a3fbe300c0e24de3a5659a6651d72b7a50f705d32491a4260.json  query-65e447f64ade98bedf981ecb03f92413d79ffcf617bd953b98cf4bcc18181b84.json  query-7a622d35a1cd2a9e608c1889955c264c5d1133eb4f1205c57a7113df427b6849.json  query-7bdc5e5899ffc62dff959c2ecfcc25ea19581cbbed16e59a3de534127f40e77d.json  query-7dd85c32b52384a32a4c3ed486eb16d4b73e8651feba33b8fd78d1d63e48fb15.json  query-7edf4e46dad71e02775c32867bec9a31f004fb03b32f01593b31a476e0ca9845.json  query-82580bbdc5642eb9d61d527d14a4b3ab8b0326b0336207bf30a10204de7602a8.json  query-852ee7f2037534ba40e5cbce2be167571b081b21048d0f51aeafaf5575bb1ea1.json  query-8545eb65bed3daa2f86d1ccec390fc173c6548ca55d8698b7a96c9f1e0068dc1.json  query-a2532c0618afc204fd3685e7538a9494fd7b5aa48c57642004da9402bb1a32ad.json  query-a35e623a930f1cc81da6c82edeebfc8cf9e36bc81c0a88f101ce09aeb8b2ff08.json  query-a78be7660b31b4ffeaa6748349e8753ab35cc68b066d14f9468c59ff21b4f521.json  query-ba18f4655e3a2437d68ecda28d616e9c18174e788710834227c841a579955842.json  query-bcbc2051598de2817803190ce7413723c23f5ef617b392a2dd638d5224f4e63e.json  query-bd4d378a4b02c1795780a47e860177c9602605a04ef680b94d6e204cab5d85ab.json  query-cb88d50d5521c4031b8aa4fbaa82e56885d3817a69fab975992aded236268ee2.json  query-d1398d609c69d7583f9b24a5ed7e7108013bb12eecf880487d8ceb83962d6f27.json  query-d681f006d588dccbf577a26e56cc5a7137bd7802a9b9bbbf4d79b6607d91caa4.json  query-d93c335fecf5ba3f44860bc07e7bca591655a8dd1e6a4d3bf29529337627b07f.json  query-e4067d5eccb02e57749ccc028fa8b5987e38a69cc612361cd659e8e6f48a6cfa.json  query-e788cce38316e8ed49d28e7d8b5d74ce3ef1585c0a62179c9c43fb6ac243c93c.json  query-f3bd89bce3b3ad851540f7bda534f3e133f870e3a0dfef65849a7cbb6de3f79d.json  (+2 more)
crates/theoj-api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  perm.rs
crates/theoj-api/src/route/: contests.rs  judge.rs  misc.rs  mod.rs  problems.rs  training_plans.rs  user.rs  users.rs  web.rs
crates/theoj-api/src/route/contests/: mod.rs  ranking_cache.rs
crates/theoj-common/: Cargo.toml
crates/theoj-common/src/: error.rs  judge.rs  lib.rs
crates/theoj-judge/: Cargo.toml
crates/theoj-judge/src/: config.rs  judge.rs  judger.cpp  judger.rs  main.rs  sandbox.rs  websocket.rs
crates/theoj-web/: Cargo.toml  build.rs  index.html  vite.config.ts
crates/theoj-web/src/: App.vue  global.d.ts  lib.rs  main.mts  main.ts  routes.mts  style.css  user.mts  utils.mts
crates/theoj-web/src/components/: ContestRanking.vue  ContestSelector.vue  EntityLink.vue  Footer.vue  Header.vue  Pagination.vue  PreviewableTextEdit.vue  TestCaseEditor.vue  ThemeToggle.vue
crates/theoj-web/src/composables/: useApiErrorHandler.mts  useMarkdownRenderer.mts
crates/theoj-web/src/pages/: Contest.vue  ContestList.vue  CreateSolution.vue  EditContest.vue  EditProblem.vue  EditTrainingPlan.vue  Index.vue  Login.vue  NotFound.vue  OverallRanking.vue  Problem.vue  (+9 more)
docs/: .env.example  config.example.yml  config.yml.example  judge_config.example.yml  schema.sql  setup.md
(+15 files in other folders)
