[workspace.package]
description = "the online judge"
authors = ["ParaN3xus"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/ParaN3xus/theoj"
repository = "https://github.com/ParaN3xus/theoj"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres"] }
tera = "1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
log = { version = "0.4.28", features = ["serde"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
