[workspace.package]
description = "the online judge"
authors = ["ParaN3xus"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/ParaN3xus/theoj"
repository = "https://github.com/ParaN3xus/theoj"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tera = "1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
axum = "0.8.6"
tower-http = { version = "0.6.6", features = [
    "trace",
    "cors",
    "normalize-path",
] }
uuid = { version = "1.18.1", features = ["v4"] }
tower-layer = "0.3.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-serde = "0.2.0"
serde_json = "1.0.145"
tower = "0.5.2"
