[workspace.package]
description = "the online judge"
authors = ["ParaN3xus"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/ParaN3xus/koioj"
repository = "https://github.com/ParaN3xus/koioj"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tera = "1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "cors",
    "normalize-path",
] }
uuid = { version = "1.18.1", features = ["v4"] }
tower-layer = "0.3.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing = "0.1.41"
tracing-serde = "0.2.0"
serde_json = "1.0.145"
tower = "0.5.2"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
regex = "1.11.3"
passwords = "3.1.16"
phf = { version = "0.13.1", features = ["macros"] }
mime_guess = "2.0.5"
rand = "0.9.2"
futures = "0.3.31"
tokio-tungstenite = "0.28.0"
sysinfo = "0.37.2"
clap = { version = "4.5.53", features = ["derive"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
axum-extra = { version = "0.12.2", features = ["form"] }
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa", "alloc", "ecdsa"] }
shellexpand = "3.1.1"
serde_plain = "1.0.2"

# our own crates
koioj-common = { path = "crates/koioj-common" }
koioj-web = { path = "crates/koioj-web" }
koioj-api = { path = "crates/koioj-api" }
koioj-judge = { path = "crates/koioj-judge" }
