[package]
name = "theoj-api"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tokio.workspace = true
