[package]
name = "theoj-common"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
serde.workspace = true
utoipa.workspace = true
sqlx.workspace = true
serde_json.workspace = true
axum.workspace = true
anyhow.workspace = true
ssh-key.workspace = true
shellexpand.workspace = true
